# urban-dictionary-python

./: conftest.py  pyproject.toml
src/urban_dictionary/: __init__.py  cache.py  client.py  scraper.py
tests/: test_client.py  test_live.py
