[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urban-dictionary-python"
version = "0.1.0"
description = "A Python library for looking up Urban Dictionary definitions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "James Andrew Myers", email = "disquietous@gmail.com" },
]
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "live: tests that hit Urban Dictionary (deselected by default, use --run-live)",
]
